tests/valid_variables/valid_variables.exp
Error ----------------------------------------------------------------------------------------------------- test.js:10:5

Variable `z` [1] is never initialized, annotated, or assigned to. [invalid-declaration]

   10| var z;
           ^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:23:5

Variable `w2` [1] is never initialized, annotated, or assigned to. [invalid-declaration]

   23| var w2;
           ^^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:24:5

Variable `w2` [1] is never initialized, annotated, or assigned to. [invalid-declaration]

   24| var w2;
           ^^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:43:5

Variable `j` [1] is never initialized, annotated, or assigned to. [invalid-declaration]

   43| let j;
           ^ [1]


Error ------------------------------------------------------------------------------------------------- test_null.js:3:5

Variable `x` [1] is only ever assigned to by `null` [2]. This is likely unintended; if it is intended, annotate `x` with
`: null` to disambiguate. [invalid-declaration]

   test_null.js:3:5
   3| var x;
          ^ [1]

References:
   test_null.js:4:1
   4| x = null;
      ^ [2]


Error ------------------------------------------------------------------------------------------------- test_null.js:7:5

Variable `y` [1] is only ever assigned to by `null`. This is likely unintended; if it is intended, annotate `y` with
`: null` to disambiguate. [invalid-declaration]

   7| var y = null;
          ^ [1]



Found 6 errors
